--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ a {
 }
 
 .section {
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .title {
@@ -61,9 +61,12 @@ a {
     text-transform: capitalize;
 }
 
+
 .hero {}
 
-.hero__continer {}
+.hero__continer {
+    display: flex;
+}
 
 .header {
     padding-top: 14px;
@@ -73,39 +76,57 @@ a {
 
 .header__content {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     width: 100%;
 }
 
 .logo {
-   display: flex;
-   align-items: center;
+    display: flex;
+    align-items: center;
 }
 
-.logo__img {}
+.logo__img {
+    margin-right: 14px;
+}
 
 .logo__pic {}
 
 .logo__text {}
 
-.logo__title {}
+.logo__title {
+    font-weight: 500;
+    letter-spacing: 0.1em;
+    font-size: 23px;
+    line-height: 27px;
+    color: #343D33;
+}
 
 .logo__subtitle {}
 
 .nav {}
 
-.nav__list {}
-
+.nav__list {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.15em;
+    font-family: "Roboto";
+    text-transform: uppercase;
+    display: flex;
+}
 .nav__item {
     display: flex;
-   
+
 }
 
 .nav__link {}
 
 .nav__item--border {}
 
-.hero__content {}
+.hero__content {
+    padding-top: 56px;
+}
 
 .hero__column {}
 
@@ -117,14 +138,145 @@ a {
 
 .hero__desc {}
 
-.hero__btns {}
+.hero__btns {
+    display: flex;
+}
 
-.btn {}
+.btn {
+    border: 2px solid #475F45;
+    display: inline;
+    padding: 20px 40px;
+    margin-right: 16px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.15em;
+    text-transform: uppercase;
 
-.btn--active {}
+}
+
+.btn:last-child {
+    margin-right: 0;
+
+}
+
+.btn--active {
+    background: #475F45;
+    color: #FFFFFF;
+}
 
 .hero__img-block {}
 
-.hero__img-wrap {}
+.hero__img-wrap {
+border: 4px solid #c3c3c3;
+box-sizing: border-box;
+border-radius: 500px 500px 0px 0px;
+width: 478px;
+height: 660px;
+overflow: hidden;
+padding: 6px;
 
-.hero__img {}
+}
+
+.hero__img {
+border-radius: 500px 500px 0px 0px;
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
+
+.btn--white {
+    color: #FFFFFF;
+    border-radius: #FFFFFF;
+}
+}
+
+.about {
+    background-color: #343D33;
+
+}
+
+.about__top-img-wrap {
+    width: 534px;
+    height: 354px;
+}
+.about__container{
+display: flex;
+flex-wrap: wrap;
+max-width: 1060px;
+
+}
+.about__top-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.about__desc {
+    width: 417px;
+}
+
+.about__bottom-img-wrap {
+    width: 100%;
+    height: 409px;
+
+}
+
+.about__bottom-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.subtitle.news__subtitle {
+    font-family: "Libre Baskerville";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 45px;
+    line-height: 110%;
+    text-transform: capitalize;
+    color: #343D33;
+}
+
+.news__img {
+    width: 236px;
+    height: 151px;
+    object-fit: cover;
+    width: 100%;
+}
+
+.news__item-title {
+    font-family: "Libre Baskerville";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 23px;
+    line-height: 110%;
+    color: #475F45;
+}
+
+.news__item-text {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    margin: 12px 0px;
+    color: #414840;
+    flex: 1;
+}
+.news__item-date{
+font-family: "Roboto";
+font-weight: 400;
+font-style: italic;
+font-size: 16px;
+line-height: 150%;
+color: #343D33;
+
+}
+.footer__top{
+background:#414840 ;
+
+}
